Mon Dec 27 15:15:18 2004  Minero Aoki  <aamine@loveruby.net>

	* lib/fileutils.rb (mv): should raise error when moving a
	  directory to the (empty) directory. [ruby-talk:124368]

	* lib/fileutils.rb (mv): wrongly did not overwrite file on Win32
	  platforms.

Mon Dec 27 14:36:20 2004  NAKAMURA Usaku  <usa@ruby-lang.org>

	* process.c (NUM2RLIM, RLIM2NUM): Without SIZEOF_RLIM_T is not error.
	  fixed: [ruby-dev:25346]

Sun Dec 26 16:21:39 2004  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb (Net::IMAP::PlainAuthenticator): added a new class
	  to support the PLAIN authentication mechanism. Thanks, Benjamin
	  Stiglitz.

Fri Dec 24 23:27:18 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk/image.rb: TkPhotoImage#cget bug fix

Fri Dec 24 03:06:13 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (io_reopen, rb_io_reopen): prohibit to change access mode for
	  special IO ports.  [ruby-dev:25225]

	* io.c (next_argv): reduce use of stdio.

Fri Dec 24 02:22:53 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/syck/rubyext.c (syck_loader_transfer): check type conversion.

	* ext/syck/rubyext.c (syck_parser_assign_io, rb_new_syck_node): duck
	  typing.

	* ext/syck/rubyext.c (syck_parser_s_alloc, syck_parser_initialize):
	  allocation framework.

	* ext/syck/rubyext.c (syck_emitter_s_alloc, syck_emitter_initialize):
	  ditto.

Fri Dec 24 01:21:00 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tkextlib/blt.rb: add BLT extension support

	* ext/tk/lib/tkextlib/blt/*.rb: ditto

	* ext/tk/lib/tkextlib/blt/tile/*.rb: ditto

Thu Dec 23 23:43:24 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (proc_setgroups): check if the argument lenght is
	  modified.  fixed: [ruby-dev:25285]

	* process.c (SIZEOF_RLIM_T): err if size of rlim_t is not set.

Thu Dec 23 19:08:41 2004  Tanaka Akira  <akr@m17n.org>

	* rubyio.h: rename FMODE_UNSEEKABLE to FMODE_DUPLEX.

	* io.c (io_check_tty): extracted function to set FMODE_LINEBUF and